# squarephish2

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
internal/dashboard/handlers/: email.go
internal/email/: email.go
internal/models/: tenant.go
internal/server/: headless.go  server.go  tenantinfo.go
squarephish/: __main__.py  config.py  models.py
squarephish/dashboard/: app.py
squarephish/dashboard/handlers/: config.py  dashboard.py  email.py  prt.py  token.py
squarephish/database/: __init__.py  connection.py  database.py  repository.py  schema.py
squarephish/email/: __init__.py  qrcode_gen.py  sender.py
squarephish/server/: devicecode.py  headless.py  poll.py  prt.py  server.py
templates/: base.html  config.html  dashboard.html  email.html
